openvidu-test-browsers: newly updated Driver users